@@ -391,6 +391,16 @@ class t3lib_beUserAuth extends t3lib_userAuthGroup {
 
 		return $isUserAllowedToLogin;
 	}
+
+	/**
+	 * Logs out the current user and clears the form protection tokens.
+	 */
+	public function logoff() {
+		t3lib_formProtection_Factory::get(
+			't3lib_formprotection_BackendFormProtection'
+		)->clean();
+		parent::logoff();
+	}
 }
 
 
