@@ -23,6 +23,7 @@
 					</li>
 					<li class="t3-install-hidden">
 						<input type="hidden" name="installToolPassword_md5" value="1" />
+						<input type="hidden" name="formToken" value="###FORMTOKEN###" />
 					</li>
 				</ol>
 			</fieldset>
