@@ -14,6 +14,7 @@
 
 	* Added feature #16027: Let typolink honour secure filelink configuration
 	* Added feature #16437: Introduce a form protection API (Thanks to the Security Team: Oliver Klee, Helmut Hummel)
+	* Added feature #16439: Use the form protection API to implement the CSRF protection in user setup and install tool (Thanks to the Security Team: Oliver Klee, Helmut Hummel)
 
 2010-11-17  Benjamin Mack  <benni@typo3.org>
 
